--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.datasource.username=root
 spring.datasource.password=Sonu@1234
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.springframework=TRACE
